Played around with Native and AppCDS